# deltastream-sdk-python

./: .changie.yaml  .coveragerc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ReadMe.md  mcp-config.json  mypy.ini  pyproject.toml  test.sh
.changes/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.2.1.md
.changes/unreleased/: Breaking Changes-20251018-014058.yaml  Fixes-20251016-214049.yaml  Under the Hood-20250920-001204.yaml  Under the Hood-20251016-220639.yaml  Under the Hood-20251016-232835.yaml  Under the Hood-20251020-220747.yaml
.github/: CODEOWNERS
.github/workflows/: changelog_release.yml  changie_generate_release_pr.yml  python.yml  release.yml
examples/csa_data_generator/: README.md  env.example  pyproject.toml
examples/csa_data_generator/src/: csa_data_generator.py
examples/defi_event_generator/: README.md  env.example  pyproject.toml  validate.py
examples/defi_event_generator/src/: defi_event_generator.py
examples/insert_entity/: README.md  env.example  pyproject.toml
examples/insert_entity/src/: insert_entity_example.py
examples/list_entity/: README.md  env.example  pyproject.toml
examples/list_entity/src/: __init__.py  list_entity_example.py
examples/list_entity/src/utils/: __init__.py  config.py
src/deltastream_sdk/: __init__.py  client.py
src/deltastream_sdk/models/: base.py  compute_pools.py  entities.py  schema_registries.py  schemas.py  stores.py  streams.py
src/deltastream_sdk/resources/: base.py  databases.py  entities.py  schemas.py  stores.py  streams.py
tests/sdk/: __init__.py  conftest.py  run_tests.py  test_client.py  test_exceptions.py  test_models.py  test_resources.py  test_store_params.py
